Add README.md, add clangd support

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -17,5 +17,9 @@
   "explorer.keyMappings.global": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
-  }
+  },
+
+  // c config
+  "clangd.enabled": true,
+  "clangd.path": "/home/yuyu/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
 }
