--- a/coc-settings.json
+++ b/coc-settings.json
@@ -28,8 +28,8 @@
     ],
     "v": "open:vsplit"
   },
-  // c config
+  // cxx config
   "clangd.enabled": true,
   "clangd.path": "/home/yuyu/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
-  "clangd.semanticHighlighting": true
+  "clangd.semanticHighlighting": true,
 }
