--- a/coc-settings.json
+++ b/coc-settings.json
@@ -30,6 +30,6 @@
   },
   // cxx config
   "clangd.enabled": true,
-  "clangd.path": "/home/yuyu/.config/coc/extensions/coc-clangd-data/install/12.0.1/clangd_12.0.1/bin/clangd",
-  "clangd.semanticHighlighting": true
+  "clangd.semanticHighlighting": true,
+  "clangd.path": "/home/yuyu/.config/coc/extensions/coc-clangd-data/install/12.0.1/clangd_12.0.1/bin/clangd"
 }
